--- a/practice/index.html
+++ b/practice/index.html
@@ -16,6 +16,7 @@
             <h2 class="protect-title">Protect your content.</h2>
             <p class="protect-text">Other platforms allow users to bypass paywalls. Our tools ensure a seamless and secure member experience.</p>
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi culpa quae sed optio? Aut dolorem ad consequuntur quod, odio nobis voluptatem qui, tenetur aliquam perspiciatis accusantium neque sapiente molestiae! Facilis.</p>
 
         </section>
     </main>
