--- a/practice/index.html
+++ b/practice/index.html
@@ -17,6 +17,7 @@
             <p class="protect-text">Other platforms allow users to bypass paywalls. Our tools ensure a seamless and secure member experience.</p>
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi culpa quae sed optio? Aut dolorem ad consequuntur quod, odio nobis voluptatem qui, tenetur aliquam perspiciatis accusantium neque sapiente molestiae! Facilis.</p>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laudantium deserunt quos?</span>
 
         </section>
     </main>
