--- a/practice/index.html
+++ b/practice/index.html
@@ -18,6 +18,10 @@
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi culpa quae sed optio? Aut dolorem ad consequuntur quod, odio nobis voluptatem qui, tenetur aliquam perspiciatis accusantium neque sapiente molestiae! Facilis.</p>
 
+
+        <section>
+            <!-- madina -->
+        </section>
         </section>
     </main>
     <footer>
