--- a/practice/index.html
+++ b/practice/index.html
@@ -20,6 +20,13 @@
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laudantium deserunt quos?</span>
 
         </section>
+        <section class="cotton">
+           <div class="container">
+            <div class="row">
+                <img src="./image/yoga.png.png" alt="image">
+            </div>
+           </div>
+        </section>
     </main>
     
 </body>
