--- a/practice/index.html
+++ b/practice/index.html
@@ -23,6 +23,9 @@
             <!-- madina -->
         </section>
         </section>
+        <section>
+            <!-- Oysha -->
+        </section>
     </main>
     <footer>
         <!-- Shodiya -->
