--- a/practice/index.html
+++ b/practice/index.html
@@ -22,6 +22,11 @@
 
         <section>
             <!-- madina -->
+            <div class="container">
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque!</p>
+                </div>
+            </div>
         </section>
         </section>
         <section>
