added banner tags

--- a/practice/index.html
+++ b/practice/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,39 +10,59 @@
     <link rel="stylesheet" href="./style.css/media.css">
     <title>Document</title>
 </head>
+
 <body>
     <main>
-        <section class="protect">
-        <div class="container">
-            <h2 class="protect-title">Protect your content.</h2>
-            <p class="protect-text">Other platforms allow users to bypass paywalls. Our tools ensure a seamless and secure member experience.</p>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi culpa quae sed optio? Aut dolorem ad consequuntur quod, odio nobis voluptatem qui, tenetur aliquam perspiciatis accusantium neque sapiente molestiae! Facilis.</p>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laudantium deserunt quos?</span>
 
-
-        <section>
-            <!-- madina -->
+        <section class="banner">
             <div class="container">
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque!</p>
-                </div>
+                <p class="p">SELL ONLINE</p>
+                <h2 class="h">
+                    CREATE <br> MEMBERS-ONLINE <br> CONTENT
+                </h2>
+
+                <p class="p">LMonetize your content with Member Areas. Add <br> paid areas to an existing Squarespace
+                    site or build <br> a new one with our award-winning templates.
+                </p>
             </div>
+
+
         </section>
+        <section class="protect">
+            <div class="container">
+                <h2 class="protect-title">Protect your content.</h2>
+                <p class="protect-text">Other platforms allow users to bypass paywalls. Our tools ensure a seamless and
+                    secure member experience.</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi culpa quae sed optio? Aut dolorem ad
+                consequuntur quod, odio nobis voluptatem qui, tenetur aliquam perspiciatis accusantium neque sapiente
+                molestiae! Facilis.</p>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laudantium deserunt quos?</span>
+
+
+            <section>
+                <!-- madina -->
+                <div class="container">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque!</p>
+                    </div>
+                </div>
+            </section>
         </section>
         <section>
             <!-- Oysha -->
         </section>
         <section class="cotton">
-           <div class="container">
-            <div class="row">
-                <img src="./image/yoga.png.png" alt="image">
+            <div class="container">
+                <div class="row">
+                    <img src="./image/yoga.png.png" alt="image">
+                </div>
             </div>
-           </div>
         </section>
     </main>
     <footer>
         <!-- Shodiya -->
     </footer>
 </body>
+
 </html>
